Adding expert pages

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <body>
 
     <header class="header">
-        <div class="container">
-            <div class="header_inner">
+        <div class="navbar">
+        <div class="navbar__wrap">
+            <!-- <div class="header_inner"> -->
                 <h1>Главная</h1>
-            </div>
+            <!-- </div> -->
         </div>
+    </div>
     </header>
 
     <div class="container">
@@ -37,7 +39,7 @@
             <button type="submit">Войти</button>
     
         </form>
-        <a href="forget_pass.html" class="forget">Забыли пароль?</a>
+        <!-- <a href="forget_pass.html" class="forget">Забыли пароль?</a> -->
         
     </div>
 </div>
