--- a/teacher_acc.html
+++ b/teacher_acc.html
@@ -30,7 +30,7 @@
               <li><a href="teacher_acc.html">Личный кабинет</a></li>
               <li><a href="tests.html">Тесты</a></li>
               <li><a href="classes.html">Классы</a></li>
-              <li><a href="subjects.html">Предметы</a></li>
+              <li><a href="subjects.html">Материалы</a></li>
             </ul>
           </div>
         <!-- </div> -->
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="teach-profile">
         <div class="teach-profile__fio">
-          <h3>Иванов Иван Иванович</h3>
+          <h3 onclick="send_req">Иванов Иван Иванович</h3>
         </div>
         <div class="img__wrapper">
           <img src="icons/profile_photo.jpg" alt="" class="profile_photo" >
