--- a/st_acc.html
+++ b/st_acc.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
           <!-- <div class="container"> -->
             <div class="navbar__wrap">
-              <img class='arrow-icon' src="icons/icon _arrow.svg" alt="" onclick="history.back();" >
+              <img class='arrow-icon' src="icons/icon_arrow.svg" alt="" onclick="history.back();" >
               <a href="#" class="logo" id="logo">Кабинет ученика</a>
   
               <div class="hamb">
@@ -24,41 +24,54 @@
                 </div>
               </div>
               <ul class="menu" id="menu">
-                <li><a href="teacher_acc.html">Личный кабинет</a></li>
-                <li><a href="tests.html">Тесты</a></li>
-                <li><a href="subjects.html">Предметы</a></li>
-                <li><a href="expert.html">Диалог с экспертом</a></li>
+                <li><a href="st_acc.html">Личный кабинет</a></li>
+                <li><a href="st_tests.html">Задания</a></li>
+                <li><a href="st_subjects.html">Материалы</a></li>
+                <li><a href="st_expert.html">Диалог с экспертом</a></li>
               </ul>
             </div>
           <!-- </div> -->
         </nav>
-
-
   
         <div class="popup" id="popup"></div>
       </header>
 
       <div class="container">
-        <div class="teach-profile">
-          <div class="teach-profile__fio">
+        <div class="block">
+
+          <div class="teach-profile__fio" id="fio">
             <h3>Ахметзянова Рената Рустемовна</h3>
           </div>
+
           <div class="img__wrapper">
-            <img src="icons/profile_photo.jpg" alt="" class="profile_photo" >
+            <img src="icons/profile_photo.jpg" alt="" class="profile_photo" />
           </div>
-          <div class="teach-profile__data">
+
+          <div class="teach-profile__data" id="teach-profile__data">
             <h5>Логин</h5>
             <h5>Дата рождения</h5>
-            <h5>Предметы</h5>
-            <h5>Логин</h5>
-            <h5><a href="edit_profile.html">Редактировать</a></h5>
+            <h5>Класс</h5>
+            <h5><a href="st_edit_profile.html">Редактировать<img src="icons/icon_edit.svg" alt="" class="edit_icon"></a></h5>
+          </div>
+          <div class="st-profile__in">
+            <h5 id="st_login">Логин</h5>
+            <h5 id="st_date">Дата рождения</h5>
+            <h5 id="st_class">Класс</h5>
           </div>
         </div>
-      </div>
+      </div>  
   
   
+      <footer class="footer">
+        <p>
+          Сервис разработан в ходе выполнения выпускной квалификационной работы
+        </p>
+        <p>Ахметзянова Рената Рустемовна</p>
+        <p>Казань 2023</p>
+      </footer>
   
         <!-- <script src="js/teacher_acc.js"></script> -->
         <script src="js/burger.js"></script>
+        <script src="js/st_acc.js"></script>
 </body>
 </html>
